--- a/elasticsearch/docker-compose.yml
+++ b/elasticsearch/docker-compose.yml
@@ -12,10 +12,10 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - esdata1:/usr/share/elasticsearch/data
+      - ./es1/data:/usr/share/elasticsearch/data
     ports:
-      - 9200:9200
-      - 9300:9300
+      - "9200:9200"
+      - "9300:9300"
     networks:
       - esnet
   elasticsearch2:
@@ -31,15 +31,9 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - esdata2:/usr/share/elasticsearch/data
+      - ./es2/data:/usr/share/elasticsearch/data
     networks:
       - esnet
-
-volumes:
-  esdata1:
-    driver: local
-  esdata2:
-    driver: local
 
 networks:
   esnet:
